changes: darkBlue hamburger menu; add: box shadow to 'Get started' buttons; fix: align anisha with other testimonials -- spacing between sections and scaling up icons on mobile;

--- a/src/input.css
+++ b/src/input.css
@@ -61,6 +61,7 @@ body {
 .button {
 	@apply p-3 px-6 text-white rounded-full bg-brightRed hover:bg-brightRedLight;
 	max-width: 130px;
+	box-shadow: 0 10px 15px -10px hsl(12, 88%, 59%);
 }
 
 .flex-container {
@@ -84,6 +85,21 @@ body {
 	#cta {
 		background-image: url(../img/bg-simplify-section-mobile.svg);
 	}
+
+	.facebook,
+	.youtube,
+	.twitter,
+	.pinterest,
+	.instagram {
+		transform: scale(1.5);
+		width: 50px;
+		height: 50px;
+	}
+	
+	#logo {
+		transform: scale(1.5);
+		margin-bottom: 3em;
+	}
 }
 
 
@@ -103,10 +119,10 @@ body {
 	top: 0;
 	left: 0;
 	width: 24px;
-	height: 2px;
-	background: black;
+	height: 2.5px;
 	transform: rotate(0);
 	transition: all 50ms;
+	@apply bg-darkBlue
 }
 
 .hamburger-middle {
